objects/Flight__c.object
<CustomObject>
    <fields>
        <fullName>Arrival_Date_and_Time__c</fullName>
        <label>Arrival Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Available_Seats__c</fullName>
        <label>Available Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Departure_Date_and_Time__c</fullName>
        <label>Departure Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Embed_URL__c</fullName>
        <label>Embed URL</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fight_id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Flight id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seating_Capacity__c</fullName>
        <label>Seating Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Flight</label>
    <nameField>
        <label>Flight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Flights</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>